crates/synapse-core/tests/snapshots/stored_types__stored_event_round_trip.snap
---
source: crates/synapse-core/tests/stored_types.rs
expression: "round_trip(\"StoredEvent\", \"snapshot\", full_event())?"
---
{
  "schema_version": 1,
  "event_id": "event-full",
  "ts_ns": 42,
  "session_id": "session-full",
  "audit_context": {
    "session_id": "session-full",
    "profile_id": "notepad",
    "profile_version": "1.0.0",
    "profile_schema_version": 1,
    "backend_policy": {
      "default": "software",
      "keyboard_default": "software",
      "mouse_default": "software",
      "pad_default": "vigem"
    },
    "app_context": {
      "process_name": "notepad.exe",
      "process_path": "C:\\Windows\\System32\\notepad.exe",
      "window_title": "Untitled - Notepad",
      "target_id": "windows.notepad"
    }
  },
  "source": "perception_hud",
  "kind": "hud_value_changed",
  "data": {
    "field": "hp",
    "new": 20
  },
  "window_id": 4660,
  "element_id": "0x1234:0102",
  "redacted": true,
  "redactions": [
    {
      "kind": "secret",
      "offset": 12,
      "len": 8
    }
  ]
}
