crates/synapse-core/tests/snapshots/stored_types__stored_observation_round_trip.snap
---
source: crates/synapse-core/tests/stored_types.rs
expression: "round_trip(\"StoredObservation\", \"snapshot\", full_observation())?"
---
{
  "schema_version": 1,
  "observation_id": "obs-full",
  "ts_ns": 10,
  "session_id": "session-full",
  "mode": "hybrid",
  "foreground": {
    "hwnd": 4660,
    "pid": 42,
    "process_name": "notepad.exe",
    "process_path": "C:\\Windows\\System32\\notepad.exe",
    "window_title": "Untitled - Notepad",
    "window_bounds": {
      "x": 10,
      "y": 20,
      "w": 800,
      "h": 600
    },
    "monitor_index": 0,
    "dpi_scale": 1.0,
    "profile_id": "notepad",
    "is_fullscreen": false,
    "is_dwm_composed": true
  },
  "focused": {
    "element_id": "0x1234:0102",
    "name": "Editor",
    "role": "document",
    "automation_id": "15",
    "bbox": {
      "x": 20,
      "y": 30,
      "w": 700,
      "h": 500
    },
    "enabled": true,
    "patterns": [
      "value",
      "text"
    ],
    "value": "hello"
  },
  "elements": [
    {
      "element_id": "0x1234:0102",
      "name": "Editor",
      "role": "document",
      "automation_id": "15",
      "bbox": {
        "x": 20,
        "y": 30,
        "w": 700,
        "h": 500
      },
      "enabled": true,
      "focused": true,
      "patterns": [
        "value"
      ],
      "children_count": 0,
      "depth": 0
    }
  ],
  "entities": [
    {
      "entity_id": "track:7",
      "track_id": 7,
      "class_label": "cursor",
      "bbox": {
        "x": 120,
        "y": 130,
        "w": 16,
        "h": 24
      },
      "confidence": 0.75,
      "first_seen_at": "1970-01-01T00:00:10Z",
      "last_seen_at": "1970-01-01T00:00:10Z",
      "velocity_px_per_s": [
        0.0,
        0.0
      ]
    }
  ],
  "hud": {
    "by_name": {
      "hp": {
        "raw_text": "20",
        "parsed": 20.0,
        "confidence": 0.97,
        "stale_ms": 0
      }
    }
  },
  "audio": {
    "rms_db": -42.0,
    "vad_speech_recent": false,
    "recent_events": [
      {
        "at": "1970-01-01T00:00:10Z",
        "kind": "loud_transient",
        "azimuth_deg": 15.0,
        "confidence": 0.8
      }
    ],
    "direction_estimate": {
      "azimuth_deg": 15.0,
      "confidence": 0.8
    }
  },
  "recent_events": [
    {
      "seq": 1,
      "at": "1970-01-01T00:00:10Z",
      "source": "perception_hud",
      "kind": "hud_value_changed",
      "data_excerpt": {
        "field": "hp"
      }
    }
  ],
  "clipboard_summary": {
    "formats": [
      "text/plain"
    ],
    "text_len": 5,
    "text_excerpt": "hello",
    "redacted": false
  },
  "fs_recent": [
    {
      "at": "1970-01-01T00:00:10Z",
      "path": "C:\\Users\\owner\\note.txt",
      "kind": "modified",
      "size_bytes": 5
    }
  ],
  "diagnostics": {
    "assembled_in_ms": 1.5,
    "a11y_enabled": true,
    "pixel_enabled": true,
    "audio_enabled": false,
    "a11y_status": "healthy",
    "capture_status": "healthy",
    "detection_status": "unavailable",
    "audio_status": "disabled",
    "is_minimized": false,
    "elements_truncated": false,
    "entities_truncated": false,
    "size_bytes": 256,
    "size_estimate_tokens": 64
  },
  "reason": "before_action",
  "redacted": true,
  "redactions": [
    {
      "kind": "secret",
      "offset": 12,
      "len": 8
    }
  ]
}
