crates/synapse-core/tests/snapshots/stored_types__stored_profile_history_entry_round_trip.snap
---
source: crates/synapse-core/tests/stored_types.rs
expression: "round_trip(\"StoredProfileHistoryEntry\", \"snapshot\",\nfull_profile_history_entry(),)?"
---
{
  "profile_id": "vscode",
  "profile_version": "2.1.0",
  "profile_schema_version": 1,
  "activated_at": "1970-01-01T00:00:02Z",
  "reason": "window_match"
}
