crates/synapse-core/tests/snapshots/stored_types__stored_redaction_round_trip.snap
---
source: crates/synapse-core/tests/stored_types.rs
expression: "round_trip(\"StoredRedaction\", \"snapshot\", full_redaction())?"
---
{
  "kind": "secret",
  "offset": 12,
  "len": 8
}
