crates/synapse-core/tests/snapshots/stored_types__stored_reflex_audit_round_trip.snap
---
source: crates/synapse-core/tests/stored_types.rs
expression: "round_trip(\"StoredReflexAudit\", \"snapshot\", full_reflex_audit())?"
---
{
  "schema_version": 1,
  "audit_id": "audit-full",
  "reflex_id": "reflex-full",
  "ts_ns": 42,
  "status": "starved",
  "event_id": "event-full",
  "audit_context": {
    "session_id": "session-full",
    "profile_id": "notepad",
    "profile_version": "1.0.0",
    "profile_schema_version": 1,
    "backend_policy": {
      "default": "software",
      "keyboard_default": "software",
      "mouse_default": "software",
      "pad_default": "vigem"
    },
    "app_context": {
      "process_name": "notepad.exe",
      "process_path": "C:\\Windows\\System32\\notepad.exe",
      "window_title": "Untitled - Notepad",
      "target_id": "windows.notepad"
    }
  },
  "steps": [
    {
      "index": 1,
      "action": {
        "kind": "mouse_button",
        "button": "left",
        "action": "press",
        "hold_ms": 16,
        "backend": "software"
      },
      "status": "completed"
    }
  ],
  "error_code": "REFLEX_STARVED",
  "details": {
    "lost_for_ms": 2000
  },
  "redacted": true,
  "redactions": [
    {
      "kind": "secret",
      "offset": 12,
      "len": 8
    }
  ]
}
