crates/synapse-core/tests/snapshots/stored_types__stored_reflex_step_round_trip.snap
---
source: crates/synapse-core/tests/stored_types.rs
expression: "round_trip(\"StoredReflexStep\", \"snapshot\", full_reflex_step())?"
---
{
  "index": 1,
  "action": {
    "kind": "mouse_button",
    "button": "left",
    "action": "press",
    "hold_ms": 16,
    "backend": "software"
  },
  "status": "completed"
}
