crates/synapse-core/tests/snapshots/stored_types__stored_session_round_trip.snap
---
source: crates/synapse-core/tests/stored_types.rs
expression: "round_trip(\"StoredSession\", \"snapshot\", full_session())?"
---
{
  "schema_version": 1,
  "session_id": "session-full",
  "started_at": "1970-01-01T00:00:10Z",
  "ended_at": "1970-01-01T00:00:20Z",
  "transport": "http",
  "client": "claude-desktop/0.4.2",
  "mode": "hybrid",
  "active_profile": "notepad",
  "audit_context": {
    "session_id": "session-full",
    "profile_id": "notepad",
    "profile_version": "1.0.0",
    "profile_schema_version": 1,
    "backend_policy": {
      "default": "software",
      "keyboard_default": "software",
      "mouse_default": "software",
      "pad_default": "vigem"
    },
    "app_context": {
      "process_name": "notepad.exe",
      "process_path": "C:\\Windows\\System32\\notepad.exe",
      "window_title": "Untitled - Notepad",
      "target_id": "windows.notepad"
    }
  },
  "profile_history": [
    {
      "profile_id": "vscode",
      "profile_version": "2.1.0",
      "profile_schema_version": 1,
      "activated_at": "1970-01-01T00:00:02Z",
      "reason": "window_match"
    }
  ],
  "redacted": true,
  "redactions": [
    {
      "kind": "secret",
      "offset": 12,
      "len": 8
    }
  ]
}
